--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,80 @@
 
+
+.slide-container{
+	width:65%;
+	height:500px;
+	border-radius:20px;
+	margin:auto;
+	overflow:hidden;
+}
+.slide-container div{
+	
+	
+}
+.imgslide{
+	width:500%;
+	height:500px;
+	display:flex;
+}
+
+.imgslide input{
+	display:none;	
+}
+
+.slide{
+	width:20%;
+	transition:2s;
+	border:2px solid red;
+}
+.slide img{
+	width:100%;
+	height:500px;
+}
+
+.navigation-manual{
+	position:absolute;
+	width:60%;
+	margin-top:-40px;
+	display:flex;
+	justify-content:center;
+	border-radius:10px;
+	height:15px;
+}
+.manual-btn{
+	border:2px solid #40D3DC;
+	border-radius:20px;
+	padding:5px;
+	cursor:pointer;
+	transition: 2s;
+}
+.manual-btn:not(:last-child){
+	margin-right:40px;
+}
+.manual-btn:hover{
+	background:#40D3DC;
+}
+#radio1:checked~.first{
+	margin-left:0;
+}
+#radio2:checked~.first{
+	margin-left:-20%;
+}
+#radio3:checked~.first{
+	margin-left:-40%;
+}
+#radio4:checked~.first{
+	margin-left:-60%;
+}
+
+#radio1:checked~.navigation-auto .auto-btn1{
+	background:#40D3DC;
+}
+#radio2:checked~.navigation-auto .auto-btn2{
+	background:#40D3DC;
+}
+#radio3:checked~.navigation-auto .auto-btn3{
+	background:#40D3DC;
+}
+#radio4:checked~.navigation-auto .auto-btn4{
+	background:#40D3DC;
+}
